pushing because its been a min

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Book Nook</title>
+    <script src="https://kit.fontawesome.com/3dadbaf51d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
